# BioOntologyKG

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
cql/embeddings/: pubmed_embeddings.cql
cql/import/: david_gene_name.cql  david_import.cql  hgnc_pubmed.cql  import_cosmic_classification.cql  import_cosmic_gene_census.cql  import_cosmic_gene_census_hallmark.cql  import_cosmic_genes.cql  import_cosmic_individual.cql  import_cosmic_mutant_census.cql  import_cosmic_mutation_census.cql  import_cosmic_sample.cql  import_cosmic_tumour.cql  import_disgenet_obo.cql  import_hgnc.cql  import_hpo.cql  import_ppi.cql  import_uniprot_generated.cql  load_ncit_thesaurus.cql  uniprot_intact.cql  uniprot_relationships.cql
cql/maintenance/: backup_restore.cql
cql/remediation/: remediate_cosmic_gene_to_gene.cql  remediate_duplicate_pubmed_ids.cql  remediate_gene_node.cql  remediate_goterm_relationships.cql  remediate_mutant_census_sample_relationship.cql  remediate_uniprot_goterms.cql  remediate_uniprot_pubmed_ids.cql
cql/schema/: constraints.cql
docs/developer_guide/: ontology_resources.md
docs/user_guide/: dependencies.txt
prompts/data_analysis/: variant_analysis.md
prompts/import/: Hgnc_pubmed_realtionship_prompt.txt  cosmic_classification_import_prompt.txt  cosmic_gene_census_hallmark_import.prompt  cosmic_gene_census_import.prompt  cosmic_genes_import_prompt.txt  cosmic_individual_import_prompt.txt  (+7 more)
scripts/: backup.sh  harmonizome_download.py  harmonizomeapi.py  import_genomic_data.py  run_cosmic_cql.sh
tests/: conftest.py
(+64 files in other folders)
